Improved nav experience on smaller devices, CSS fix for projects page.

--- a/_sass/base/variables.sass
+++ b/_sass/base/variables.sass
@@ -12,7 +12,8 @@ $zeta: #5c5c5c
 $eta: #4a4a4a
 $hope: #008F47
 
-$mobile: "only screen and (max-width: 420px)"
+$mobile-small: "only screen and (max-width: 320px)"
+$mobile: "only screen and (min-width: 320px) and (max-width: 420px)"
 $tablet: "only screen and (min-width: 420px) and (max-width: 1050px)"
 $above: "only screen and (min-width: 780px)"
 $below: "only screen and (max-width: 780px)"
