--- a/_sass/pages/home-blog-projects.sass
+++ b/_sass/pages/home-blog-projects.sass
@@ -1,6 +1,7 @@
 .home,
 .blog,
-.projects
+.projects,
+.projekte
     margin-top: 125px
 
     > .list
@@ -25,7 +26,8 @@
 
 .home > .list,
 .blog > .list,
-.projects > .list
+.projects > .list,
+.projekte > .list
     > .item
         display: block
         width: 95%
@@ -44,7 +46,7 @@
         transition: all ease-in-out .2s
 
     > .item:hover > .url > .title
-        color: $delta
+        color: $hope
 
     // maybe we can't nest html5 elements
     // can you help me?
@@ -64,6 +66,7 @@
 
 .blog > .list > .item > .url,
 .projects > .list > .item > .url
+.projekte > .list > .item > .url
     > .title
         display: inline
 
